# Notification_service

./: .pre-commit-config.yaml  Dockerfile  docker-compose.yml  main.py  pyproject.toml
producer/: Dockerfile
producer/api/: __init__.py  __main__.py  enum.py
producer/api/gateway/: rabbitmq.py
producer/api/services/: handler.py
receiver/: Dockerfile  app.py
receiver/api/: __init__.py
receiver/api/gateway/: rabbitmq.py
src/: aws_file.py  mongodb_file.py  rebbitmq_file.py  utils.py
src/config/: __init__.py
src/tests/: aws_tests.py  conftest.py  mongodb_tests.py  rebbitmq_tests.py
